--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects</title>
     <script src="object.js"></script>
+    <script src="datatype.js"></script>
 </head>
 <body>
     
