--- a/assignment_3.html
+++ b/assignment_3.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML fra Data</title>
-    <script src="script.js"></script>
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="student-list">
+
+    </div>
 </body>
 </html>
